--- a/assets/css/partials/_tables.scss
+++ b/assets/css/partials/_tables.scss
@@ -64,7 +64,7 @@
     margin-top: 2rem;
     color: #909090;
     &:hover {
-      box-shadow: 0 26px 120px 0 rgb(0 0 0 / 14%);
+      box-shadow: 14px 2px 80px -13px rgb(0 0 0 / 24%);
       background-color: #fff !important;
       cursor: pointer;
       td {
