--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -374,6 +374,8 @@ a {
 }
 // ==========================
 .patient-page {
+  overflow-x: auto;
+
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
     border: none !important;
   }
