--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -183,3 +183,14 @@
     }
   }
 }
+// 
+.step-col {
+  .ant-steps-small .ant-steps-item-title {
+    font-size: 12px !important;
+    margin-top: 5px;
+    // min-width: 150px;
+    &::after {
+      display: none;
+    }
+  }
+}
