--- a/assets/css/components/_screening.scss
+++ b/assets/css/components/_screening.scss
@@ -10,6 +10,7 @@
     border-radius: 15px;
     color: black;
     padding-left: 1%;
+    border-bottom: 1px solid !important;
   }
   .ant-list-grid .ant-col > .ant-list-item {
     /* display: block; */
