--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -96,7 +96,7 @@
 }
 .ant-form-item-children {
   position: relative;
-  color: red;
+  // color: red;
 }
 .ant-select-selection__rendered,
 .ant-select-selection-selected-value {
