--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -236,8 +236,9 @@
         td {
           padding-top: 0 !important;
           font-weight: bold;
+          border-radius: 0;
           .ant-row.ant-form-item {
-            margin: 5px 0;
+            margin: 17px 0;
             padding: 8px;
           }
           .ant-form-item-children {
