--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -269,7 +269,7 @@ a {
 .vertical-line-standard-table {
   width: 1px;
   height: 20px;
-  border: 0.3px solid #999;
+  border: 0.3px solid #e9e9e9;
   margin: 0 5px;
 
   // why do this why so many sci ? @naveed discuss with me
