--- a/assets/css/partials/_btn.scss
+++ b/assets/css/partials/_btn.scss
@@ -31,3 +31,11 @@ a {
 .error-ok-btn{
   padding: 5px 50px;
 }
+// ======extra
+.grey-card.treat-body {
+  .grey-card.mt-5{
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+    padding-top: 5px !important;
+  }
+}
