--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -102,7 +102,7 @@
       .ant-tabs-nav-scroll {
         text-align: center;
         .ant-tabs-tab {
-          margin-right: 3px !important;
+          margin: 3px !important;
         }
       }
     }
