fix: tabs issue

--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -194,6 +194,13 @@
     }
   }
 }
+.ant-steps-small {
+.ant-steps-item-finish {
+  .ant-steps-item-content::before {
+    border: 3px solid #fff;
+  }
+}
+}
 //
 .notes-body {
   .ant-form-item-control {
