--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -282,7 +282,7 @@
     .ant-steps-item-content {
       &::before {
         width: 21px;
-        border: 3px solid white;
+        // border: 3px solid white;
         border-radius: 15px;
         height: 21px;
         // margin-left: 10px;
@@ -458,10 +458,10 @@
     margin-left: 2%;
     // margin-right: 5%;
     .ant-steps-item-content {
-      margin-left: 5px;
-      margin-top: 10px;
+      margin-left: 15px;
+      // margin-top: 7px;
       font-weight: 200;
-      font-size: 1.25rem;
+      font-size: 1.8rem;
       .ant-steps-item-title {
         font-size: large;
         font-weight: 400;
@@ -476,7 +476,7 @@
       &::before {
         width: 35px;
         height: 35px;
-        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg);
+        // background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg);
       }
     }
   }
@@ -563,7 +563,7 @@
   }
 
   .ant-tabs-content {
-    margin-left: 3px;
+    // margin-left: 3px;
     padding-left: 15px;
   }
 }
