feat: screening_logs

--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -8,7 +8,9 @@
     z-index: 2;
   }
 }
-
+.amended-category {
+  background: #fffbc8;
+}
 .manufacturer-step {
   // border: 1px solid red;
   .step-col::before {
