--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -264,7 +264,7 @@
     .ant-tabs-tab-completed {
       background-color: #d1f2dc;
       &::before {
-        margin-right: 10px;
+        margin-right: 0;
         background-size: cover;
         background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle.svg');
         background-repeat: no-repeat;
