fix: hospital ui minor fixes

--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -69,6 +69,7 @@
 
   .ant-btn-drop-down {
     margin-top: auto;
+    bottom: -5px;
   }
 
   .container-steps-div {
@@ -127,7 +128,7 @@
     .ant-steps-item {
       margin-right: 8px !important;
       padding-right: 3px;
-      margin-top: 8px;
+      margin-top: 6px;
     }
     .Treatments {
       padding-right: 5px;
