--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -270,7 +270,7 @@ a {
   width: 1px;
   height: 20px;
   border: 0.3px solid #e9e9e9;
-  margin: 0 5px;
+  margin: 6px 5px 0 0;
 
   // why do this why so many sci ? @naveed discuss with me
   // position: absolute;
