--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -21,6 +21,7 @@
   .ant-steps-item {
     flex: auto;
     padding-top: 10px;
+    margin-top: auto !important;
     padding-bottom: 8px;
   }
   .ant-steps-item-title {
@@ -128,7 +129,8 @@
     .ant-steps-item {
       margin-right: 8px !important;
       padding-right: 3px;
-      margin-top: 6px;
+      margin-bottom: 4px;
+      margin-top: 4px;
     }
     .Treatments {
       padding-right: 5px;
@@ -208,7 +210,7 @@
   .ant-steps-item-content {
     // margin-right: 5px;
     .ant-steps-item-title {
-      height: 25px;
+      height: 23px;
       margin: 0;
       padding-right: 4px;
       // margin-left: 5px;
