fix: patient inner tabs size

--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -668,3 +668,12 @@
     }
   }
 }
+// 
+// @media(max-width: 101%){
+//   .default-card.pills-tabs.green-on-update {
+//     .ant-tabs-nav-scroll {
+//       .ant-tabs-tab
+//         margin: 0;
+//       }
+//     } 
+// }
