--- a/assets/css/components/_patient-details.scss
+++ b/assets/css/components/_patient-details.scss
@@ -76,7 +76,7 @@
   color: gray;
   &:hover {
     color: #000;
-    background-color: #c1c1c1;
+    background-color: #d5d5d5;
   }
 }
 .btn-send.ant-btn[disabled] {
