--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -95,6 +95,9 @@
       }
     }
   }
+  .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active{
+    margin-left: 30px;
+  }
 }
 .mt-15.view-screen {
   .ant-card-body {
