--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -311,6 +311,9 @@ input#login_password:focus {
 .font-wt-600 {
   font-weight: 600;
 }
+.font-bold{
+  font-weight: bold;
+}
 .message-scr-tabs {
   border-radius: 1px;
   .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab {
