--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -543,13 +543,13 @@
     .left {
       .step-title {
         display: block;
-        font-size: 1.24em;
+        font-size: 1.2rem;
         color: black;
         font-weight: 400;
       }
       .date-time {
-        font-size: 1rem;
-        color: #a7a5a5;
+        font: 16px poppins,sans-serif;
+        color: black;
       }
     }
     .right {
