--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -50,7 +50,7 @@
 }
 .ant-calendar-picker-input {
   margin-top: 3px;
-  margin-bottom: 9px;
+  // margin-bottom: 9px;
 }
 .ant-table-body {
   border-radius: 22px;
