--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -267,10 +267,11 @@ a {
   }
 }
 .vertical-line-standard-table {
+  padding-bottom: 5px;
   width: 1px;
   height: 20px;
   border: 0.3px solid #e9e9e9;
-  margin: 6px 5px 0 0;
+  margin: 6px 4px 0 0;
 
   // why do this why so many sci ? @naveed discuss with me
   // position: absolute;
@@ -315,7 +316,10 @@ a {
     border-radius: 22px;
     zoom: 1.3;
   }
-
+  .ant-pagination-next,
+  .ant-pagination-prev {
+    border-radius: 22px;
+  }
   .ant-pagination-item-active {
     background-color: #fa6363;
     border: none;
@@ -392,10 +396,10 @@ a {
   .ant-table-row {
     .action-button.ant-btn {
       height: fit-content;
-      padding: 8px 10px;
+      padding: 7px 10px;
       color: #000;
       span {
-        font-size: 14px;
+        font-size: 13px;
       }
       // padding: 13px 15px;
     }
@@ -466,7 +470,7 @@ a {
     .ant-tabs-nav {
       .ant-tabs-tab {
         margin-right: 7px !important;
-        width: 32.5%;
+        // width: 32.5%;
         .ant-tabs-tab-unclosable {
           font-size: 14px;
         }
@@ -584,6 +588,10 @@ a {
   margin: 25px;
   margin-bottom: 16px;
   margin-top: 0;
+  padding: 0 45px;
+  .ant-tabs-tab-active {
+    margin-left: 0;
+  }
 }
 
 //
@@ -738,4 +746,7 @@ a {
 }
 .sample-shipping-detail > div > div.ant-tabs {
   width: 100%;
+}
+.anticon-down {
+  margin-left: 4px !important;
 }
