fix: hover effect from listing

--- a/assets/css/components/_patient-page.scss
+++ b/assets/css/components/_patient-page.scss
@@ -7,9 +7,8 @@
   .ant-table-content {
     .ant-table-tbody tr {
       &:hover {
-        background: #fff;
-        box-shadow: 0 26px 60px 0 rgb(0 0 0 / 10%);
-        background-color: #fff;
+        // background: #fff;
+        // box-shadow: 0 26px 60px 0 rgb(0 0 0 / 10%);
         background-image: url(http://sch-dev-atmps.microsysx.com/assets/media/Rectangle%20121.png);
         background-repeat: no-repeat;
         background-position: left;
