fix: patient form

--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -21,6 +21,7 @@
 .slots-main {
   .ant-select-selection__placeholder {
     display: block !important;
+    color: black;
   }
   // .note-area {
 
