--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -149,8 +149,11 @@
     margin-bottom: 10px;
     p {
       margin: 0 !important;
-      padding: 10px;
+      padding: 7px;
       color: rgb(112, 112, 112);
+    }
+    p.mt-15 {
+      padding: 15px;
     }
   }
   h4 {
