--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -267,11 +267,11 @@ a {
   }
 }
 .vertical-line-standard-table {
-  padding-bottom: 5px;
+  padding-bottom: 9px;
   width: 1px;
   height: 20px;
   border: 0.3px solid #e9e9e9;
-  margin: 6px 4px 0 0;
+  margin: 2px 6px 0 0;
 
   // why do this why so many sci ? @naveed discuss with me
   // position: absolute;
@@ -311,7 +311,7 @@ a {
     zoom: 1.3;
   }
   .ant-pagination-item,
-  .ant-pagination-disabled .ant-pagination-item-link,
+   .ant-pagination-item-link,
   .ant-pagination-disabled {
     border-radius: 22px;
     zoom: 1.3;
@@ -319,6 +319,7 @@ a {
   .ant-pagination-next,
   .ant-pagination-prev {
     border-radius: 22px;
+    zoom: 1.3;
   }
   .ant-pagination-item-active {
     background-color: #fa6363;
