fix: adhoc changes in hospital portal

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -348,6 +348,7 @@ a {
     padding: 15px 10px;
     border-radius: 22px;
     background-color: #f9f9f9;
+    font-weight: 600;
   }
 }
 .clearfix.mt-15 {
