--- a/assets/css/components/_forms.scss
+++ b/assets/css/components/_forms.scss
@@ -51,3 +51,25 @@
   white-space: pre-line;
   box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
 }
+.add-bag-modal {
+  .ant-form-item-control {
+    input {
+      height: 47px !important;
+      padding-bottom: 6px;
+    }
+    textarea {
+      height: 77px;
+      margin-bottom: 15px;
+  
+    }
+  }
+}
+.add-bag-modal+.ant-row.ant-form-item {
+  margin-bottom: 0;
+  // .ant-calendar-picker-input.ant-input {
+  //   padding-bottom: 6px !important;
+  // }
+  .text-right.ant-row.ant-form-item {
+  margin-bottom: 0 !important;
+}
+}
