style: notes text area align to left and some minor fixes

--- a/assets/css/partials/_tempFile.scss
+++ b/assets/css/partials/_tempFile.scss
@@ -211,6 +211,8 @@
 .notes-body {
   .ant-form-item-control {
     margin: 6px;
+    margin-left: 10px;
+    text-align: left;
     input {
       background-color: transparent;
       padding-bottom: 12px;
