--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -436,3 +436,24 @@ input#login_password:focus {
     transform: rotate(-45deg);
   }
 }
+.manf-coll-admin-btn{
+  .ant-btn:hover, .ant-btn:focus, .ant-btn:active, .ant-btn.active {
+    text-decoration: none;
+    background: #f3f3f3;
+    border-color: white;
+    color: gray;
+    box-shadow: 0 0.1rem 1rem rgb(0 0 0 / 5%);
+}
+}
+.no-arrow-on-number-field{
+  input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+}
