--- a/assets/css/partials/_btn.scss
+++ b/assets/css/partials/_btn.scss
@@ -47,10 +47,15 @@ a {
   table {
     tr {
       td {
+        color: #000;
         border-right: 0 !important;
         border-left: 0 !important;
         border-top: 0 !important;
         border-bottom: 1px solid #ececec !important;
+        border-bottom-left-radius: 0 !important;
+    border-top-left-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+    border-top-right-radius: 0 !important;
       }
     }
   }
