--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -168,6 +168,7 @@
 .page-footer {
   .ant-table-pagination.ant-pagination {
     // float: left;
+    text-align: right;
     display: inline-block;
     .ant-pagination-options {
       float: left;
