--- a/assets/css/components/_forms.scss
+++ b/assets/css/components/_forms.scss
@@ -60,16 +60,28 @@
     textarea {
       height: 77px;
       margin-bottom: 15px;
-  
     }
   }
 }
-.add-bag-modal+.ant-row.ant-form-item {
+.add-bag-modal + .ant-row.ant-form-item {
   margin-bottom: 0;
   // .ant-calendar-picker-input.ant-input {
   //   padding-bottom: 6px !important;
   // }
   .text-right.ant-row.ant-form-item {
-  margin-bottom: 0 !important;
+    margin-bottom: 0 !important;
+  }
 }
+.support-add-modal {
+  .ant-form-item-label {
+    line-height: 24px;
+  }
+  .ant-row {
+    .ant-form-item {
+      margin-bottom: 13px;
+    }
+  }
+  #patientEnrollment_description,#patientEnrollment_subject, .ant-select-selection-selected-value {
+    color: #000;
+  }
 }
