--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -350,6 +350,14 @@
   }
 }
 .patient-phone-field{
+  .has-error .ant-select-selection {
+    border: 1px solid red !important;
+}
+.has-error .ant-input {
+  background-color: #fff;
+  border: 1px solid red;
+  border-left-color: white;
+}
   .ant-input-group.ant-input-group-compact > *:first-child,
 .ant-input-group.ant-input-group-compact
 > .ant-select:first-child
