--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -446,3 +446,9 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 }
+.font-size-16{
+  font-size:16px;
+}
+.font-size-18{
+  font-size: 18px;
+}
