--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -209,7 +209,6 @@
       font-weight: 400;
     }
   }
- 
 }
 .patient-page {
   .enrollment-page {
@@ -349,62 +348,66 @@
     margin-top: -15px;
   }
 }
-.patient-phone-field{
+.patient-phone-field {
   .has-error .ant-select-selection {
     border: 1px solid red !important;
-}
-.has-error .ant-input {
-  background-color: #fff;
-  border: 1px solid red;
-  border-left-color: white;
-}
+  }
+  .has-error .ant-input {
+    background-color: #fff;
+    border: 1px solid red;
+    border-left-color: white;
+  }
   .ant-input-group.ant-input-group-compact > *:first-child,
-.ant-input-group.ant-input-group-compact
-> .ant-select:first-child
-> .ant-select-selection,
-.ant-input-group.ant-input-group-compact
-> .ant-calendar-picker:first-child
-.ant-input,
-.ant-input-group.ant-input-group-compact
-> .ant-select-auto-complete:first-child
-.ant-input,
-.ant-input-group.ant-input-group-compact
-> .ant-cascader-picker:first-child
-.ant-input,
-.ant-input-group.ant-input-group-compact
-> .ant-mention-wrapper:first-child
-.ant-mention-editor,
-.ant-input-group.ant-input-group-compact
-> .ant-time-picker:first-child
-.ant-time-picker-input {
-border-top-left-radius: 20px;
-border-bottom-left-radius: 20px;
-padding-bottom: 1px;
+  .ant-input-group.ant-input-group-compact
+    > .ant-select:first-child
+    > .ant-select-selection,
+  .ant-input-group.ant-input-group-compact
+    > .ant-calendar-picker:first-child
+    .ant-input,
+  .ant-input-group.ant-input-group-compact
+    > .ant-select-auto-complete:first-child
+    .ant-input,
+  .ant-input-group.ant-input-group-compact
+    > .ant-cascader-picker:first-child
+    .ant-input,
+  .ant-input-group.ant-input-group-compact
+    > .ant-mention-wrapper:first-child
+    .ant-mention-editor,
+  .ant-input-group.ant-input-group-compact
+    > .ant-time-picker:first-child
+    .ant-time-picker-input {
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    padding-bottom: 1px;
+  }
+  .ant-input-group.ant-input-group-compact > *:last-child,
+  .ant-input-group.ant-input-group-compact
+    > .ant-select:last-child
+    > .ant-select-selection,
+  .ant-input-group.ant-input-group-compact
+    > .ant-calendar-picker:last-child
+    .ant-input,
+  .ant-input-group.ant-input-group-compact
+    > .ant-select-auto-complete:last-child
+    .ant-input,
+  .ant-input-group.ant-input-group-compact
+    > .ant-cascader-picker:last-child
+    .ant-input,
+  .ant-input-group.ant-input-group-compact
+    > .ant-cascader-picker-focused:last-child
+    .ant-input,
+  .ant-input-group.ant-input-group-compact
+    > .ant-mention-wrapper:last-child
+    .ant-mention-editor,
+  .ant-input-group.ant-input-group-compact
+    > .ant-time-picker:last-child
+    .ant-time-picker-input {
+    border-right-width: 1px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+  }
 }
-.ant-input-group.ant-input-group-compact > *:last-child,
-.ant-input-group.ant-input-group-compact
-> .ant-select:last-child
-> .ant-select-selection,
-.ant-input-group.ant-input-group-compact
-> .ant-calendar-picker:last-child
-.ant-input,
-.ant-input-group.ant-input-group-compact
-> .ant-select-auto-complete:last-child
-.ant-input,
-.ant-input-group.ant-input-group-compact
-> .ant-cascader-picker:last-child
-.ant-input,
-.ant-input-group.ant-input-group-compact
-> .ant-cascader-picker-focused:last-child
-.ant-input,
-.ant-input-group.ant-input-group-compact
-> .ant-mention-wrapper:last-child
-.ant-mention-editor,
-.ant-input-group.ant-input-group-compact
-> .ant-time-picker:last-child
-.ant-time-picker-input {
-border-right-width: 1px;
-border-top-right-radius: 20px;
-border-bottom-right-radius: 20px;
-}
+
+.excurionTab {
+  border: 1px solid red;
 }
