--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -537,11 +537,26 @@
       color: #1bb559;
     }
   }
+  .ant-timeline-item-head-red {
+    background-color: lightcoral;
+    border-radius: 22px;
+    padding: 5px;
+    margin-top: 20px;
+    .anticon {
+      background-color: white;
+      border-radius: 22px;
+      padding: 5px;
+      color: red;
+    }
+  }
   .green-border {
     border: 1px solid #1bb559;
   }
   .grey-border {
     border: 1px solid #e3e4e4;
+  }
+  .red-border{
+    border: 1px solid red;
   }
   .step-bar {
     padding: 10px;
