--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -537,12 +537,14 @@
       color: #1bb559;
     }
   }
-
   .green-border {
     border: 1px solid #1bb559;
   }
   .grey-border {
     border: 1px solid #e3e4e4;
+  }
+  .red-border{
+    border: 1px solid red;
   }
 
   .step-bar {
