--- a/assets/css/partials/_padding.scss
+++ b/assets/css/partials/_padding.scss
@@ -65,6 +65,12 @@
 .pt-0 {
   padding-top: 0 !important;
 }
+.pt-1{
+  padding-top: 1%;
+}
+.pt-05{
+  padding-top:0.75%;
+}
 .pl-10 {
   padding-left: 10%;
 }
