fix: minor changes

--- a/assets/css/partials/_buttons.scss
+++ b/assets/css/partials/_buttons.scss
@@ -52,7 +52,7 @@
 
 .dangerFadeInOut {
   padding: 30px 15px !important;
-  background: $danger;
+  background: #dc4e41;
   -webkit-animation: fadeinout 3s linear infinite;
   animation: fadeinout 3s linear infinite;
   color: white;
