--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -56,6 +56,8 @@
   .h-tabs .ant-tabs-tab {
     padding: 8px 10px;
     margin-top: 10px;
+    min-width: 80px;
+    text-align: center;
   }
   .ant-tabs-top-bar {
     div.ant-tabs-nav-wrap {
@@ -166,4 +168,7 @@
       display: none !important;
     }
   }
+}
+.min-height{
+  height:60px;
 }
