--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -449,6 +449,13 @@ input[type="number"] {
 .font-size-16{
   font-size:16px;
 }
+.font-size-14{
+  font-size:14px;
+}
 .font-size-18{
   font-size: 18px;
+}
+.width-100{
+  width: 100px;
+  text-align: center;
 }
