--- a/assets/css/partials/_cards.scss
+++ b/assets/css/partials/_cards.scss
@@ -32,6 +32,12 @@
   border-radius: 15px;
 }
 
+.white-card-smart-lab-label {
+  font-size: 0.875rem;
+  font-weight: bold;
+  margin-top: 10px;
+  border-radius: 15px;
+}
 
 .avatar-card {
   margin-top: 15px;
