--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -447,8 +447,14 @@ input[type="number"] {
 }
 }
 .font-size-16{
-  font-size:16px;
+  font-size:16px !important;
 }
 .font-size-18{
-  font-size: 18px;
+  font-size: 18px !important;
+}
+.font-size-24 {
+  font-size: 24px;
+}
+.font-size-20{
+  font-size: 20px;
 }
