feat: excursion circle flashing

--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -82,7 +82,7 @@
   }
   .ant-select-selection__placeholder,
   .ant-select-search__field__placeholder {
-    
+    // 
   }
   .ant-table-empty .ant-table-body {
     border-radius: 60px;
