--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -637,6 +637,7 @@ a {
       margin-left: 7px !important;
       .ant-steps-item-title {
         margin: 0 7px 0 0 !important;
+        padding-right:20px;
       }
     }
   }
