--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -471,6 +471,9 @@ input[type="number"] {
 .font-size-14{
   font-size:14px;
 }
+.font-size-12{
+  font-size:12px;
+}
 .font-size-18{
   font-size: 18px !important;
 }
