feat: label_address_feature

--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -147,7 +147,7 @@
     background-color: $danger;
   }
   .ant-switch-checked {
-    background-color: $primary-color;
+    background-color: #53b941;
   }
 }
 .manf-treatment-body {
