--- a/assets/css/partials/_grid.scss
+++ b/assets/css/partials/_grid.scss
@@ -4,6 +4,21 @@
 .w-50 {
   width: 50%;
 }
+.w-30 {
+  width: 30%;
+}
+.w-20 {
+  width: 20%;
+}
+.w-25 {
+  width: 25%;
+}
+.w-70 {
+  width: 70%;
+}
+.w-80 {
+  width: 80%;
+}
 .w-40 {
   width: 40%;
 }
