fix: smartlab_qp_process_fixes

--- a/assets/css/components/_inventory.scss
+++ b/assets/css/components/_inventory.scss
@@ -147,7 +147,7 @@
     background-color: $danger;
   }
   .ant-switch-checked {
-    background-color: #53b941;
+    background-color: #2255c2;
   }
 }
 .manf-treatment-body {
