--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -632,12 +632,13 @@ a {
 // ================== SMARTLAB ======================
 .smartlab_task {
   .treatment-steps {
+    width: 70%;
     .ant-steps-item {
       margin-right: 0 !important;
-      margin-left: 7px !important;
+      margin-left: 5px !important;
       .ant-steps-item-title {
-        margin: 0 7px 0 0 !important;
-        padding-right:20px;
+        margin: 0 5px 0 0 !important;
+        padding-right:15px;
       }
     }
   }
