--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -360,6 +360,7 @@ a {
     border: 1px solid #ececec !important;
   }
 }
+
 .users-list {
   .ant-btn:active {
     color: unset !important;
@@ -766,6 +767,17 @@ a {
 }
 .anticon-down {
   margin-left: 4px !important;
+}
+.consentClass{
+  background-color: white;
+  border-radius: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  height:50px;
+  border-top: 2px solid #D9D9D9;
+  border-bottom: 2px solid #D9D9D9;
+  border-left: 2px solid #D9D9D9;
+  border-right: 2px solid #D9D9D9;
 }
 .flash {
   color: red;
